package exercise42.base;

import java.util.List;

public class employeeOutput {

    public void oEmployee(List<List<String>> employee) {
        //create lineNo = 1
        //for loop that prints each line of the code underneath a table header
    }
}
