package exercise42.base;

import java.io.File;
import java.util.List;
import java.util.Scanner;

public class employeeReader {

    public void rEmployee(File file, Scanner read, List<List<String>> employee) {
        //try
            //call read and then scan the file
            //read line from file and add it to a string array but split it by ,
            //add the result to the arrayList employee
        //catch
            //stackTrace
    }
}
